2005-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (dh_base_new_window): Don't show the window here.

	* ui/window.ui:
	* src/dh-gecko-utils.cpp:
	* src/dh-html.c:
	* src/dh-window.c: Add support for tabs. Based on patch from Brent
	Smith, bug #154248.
	- Remove externs from libdevhelp referrering to the devhelp
	binary.

2005-10-01  Richard Hult  <richard@imendio.com>

	* acinclude.m4:
	* configure.in:
	* src/Makefile.am: Reorganize a bit so that we can use compiler
	warnings better suited for C (split out the C++ part in a separate
	static library). Clean up the dependencies.

	* src/dh-base.c: Clean up a bit, initiaize gecko here instead of
	in main(). Use glib to read the directory list instead of gnomevfs
	and don't duplicate the code to read gzipped devhelp files.

	* src/dh-html.c: Remove unused includes.

	* src/dh-main.c: Don't initialize gecko here, remove unused
	includes. Remove the geometry option since it doesn't work and
	also breaks the libdevhelp library.
	
	* src/dh-parser.c: Clean up and handle conditional gzip support
	internally.
	
	* src/dh-window.c: Fix the function signature for delete-event,
	and don't destroy the window in the handler.

2005-09-30  Richard Hult  <richard@imendio.com>

	* src/dh-window.c:
	* ui/window.ui: Remove Quit menu item.

2005-09-29  Richard Hult  <richard@imendio.com>

	* Makefile.am: Remove stray space.

	* configure.in:
	* src/dh-base.c: (base_init),
	(dh_base_get_window_on_current_workspace): Use libwnck to track
	windows, since we can't differentiate between a minimized and
	on-another-workspace window otherwise.

	* src/dh-search.c (dh_search_new): Try without the search label
	for a bit.

2005-09-29  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (is_window_on_current_workspace),
	(dh_base_get_window_on_current_workspace): New function, returns a
	window if there is one on the current workspace.

	* src/dh-main.c: (message_received_cb), (main): Change to always